# openapi-service-client

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: lint.yml  pypi_release.yml  tests.yml
openapi_service_client/: __init__.py  client.py
openapi_service_client/config/: __init__.py  configuration.py
openapi_service_client/http_client/: __init__.py  client.py
openapi_service_client/request_builder/: __init__.py  builder.py
openapi_service_client/spec/: __init__.py  open_api_spec.py  operation.py
src/openapi_service_client/: __init__.py  auth_factory.py  client.py  client_configuration.py
src/openapi_service_client/config/: __init__.py  auth_strategy.py  configuration.py  payload_extractor.py
src/openapi_service_client/http_client/: __init__.py  client.py
src/openapi_service_client/providers/: __init__.py  anthropic.py  cohere.py  converter.py  llm_provider.py  openai.py  payload_extractor.py
src/openapi_service_client/request_builder/: __init__.py  builder.py
src/openapi_service_client/schema_converter/: __init__.py  anthropic.py  cohere.py  converter.py  openai.py
src/openapi_service_client/spec/: __init__.py  open_api_spec.py  operation.py
test/: conftest.py
test/client/: test_client.py  test_client_auth.py  test_client_complex_request_body.py  test_client_edge_cases.py  test_client_error_handling.py
test/test_files/: openapi_order_service.json
tests/: conftest.py
tests/client/: test_client.py  test_client_auth.py  test_client_complex_request_body.py  test_client_complex_request_body_mixed.py  test_client_edge_cases.py  test_client_error_handling.py  test_client_live.py  test_client_live_anthropic.py  test_client_live_cohere.py  test_client_live_openai.py  test_cohere_conversion.py  test_openai_conversion.py  test_openapi_spec.py
tests/test_files/: complex_types_openapi_service.json  openapi_edge_cases.yml  openapi_error_handling.yml  openapi_greeting_service.yml  openapi_order_service.yml  serper.yaml
