[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openapi_service_client"
version = "0.1.0"
description = "A client library for invoking APIs based on provided OpenAPI specifications"
authors = [{name = "Vladimir Blagojevic", email = "dovlex@gmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "pyyaml",
    "requests",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "mypy",
    "pytest",
    "black",
    "isort",
    "httpx",
    "fastapi",
]
